# axelar-cgp-soroban

./: .gitignore  .release-plz.toml  Cargo.toml  README.md  optimize.sh
.cargo/: config.toml
.github/actions/compile-stellar/: action.yaml
.github/actions/setup-stellar/: action.yaml
.github/workflows/: codecov.yaml  compile.yaml  conventional-commits.yaml  create-release-pr.yaml  lint.yaml  release-hash.yaml  release.yaml  reusable-build-upload.yaml  test.yaml  upload-docs.yaml
axelar-network/: Cargo.toml
axelar-network/src/: auth.rs  gateway.rs  lib.rs  test.rs  utils.rs
contract/: Cargo.toml
contract/src/: admin.rs  gateway.rs  test.rs
contracts/axelar-auth-verifier/: Cargo.toml
contracts/axelar-auth-verifier/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  storage_types.rs  test.rs  testutils.rs  types.rs
contracts/axelar-executable/: Cargo.toml
contracts/axelar-executable/src/: error.rs  interface.rs  lib.rs  test.rs
contracts/axelar-gas-service/: Cargo.toml
contracts/axelar-gas-service/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  storage_types.rs  test.rs  types.rs
contracts/axelar-gas-service/tests/: test.rs
contracts/axelar-gateway/: Cargo.toml  build.rs
contracts/axelar-gateway/src/: admin.rs  auth.rs  contract.rs  error.rs  event.rs  executable.rs  gateway.rs  interface.rs  lib.rs  messaging_interface.rs  storage_types.rs  test.rs  test_auth.rs  test_gateway.rs  testutils.rs  types.rs
contracts/axelar-gateway/tests/: auth.rs  gateway.rs  test.rs  upgrade.rs
contracts/axelar-gateway/tests/testdata/: axelar_gateway_old.wasm
contracts/axelar-gateway/tests/utils/: mod.rs
contracts/axelar-interchain-token-service/: Cargo.toml
contracts/axelar-interchain-token-service/src/: contract.rs  error.rs  event.rs  lib.rs  storage_types.rs  test.rs
contracts/axelar-operators/: Cargo.toml
contracts/axelar-operators/src/: contract.rs  error.rs  event.rs  lib.rs  storage_types.rs  test.rs
contracts/axelar-operators/tests/: test.rs
contracts/axelar-service-governance/: Cargo.toml
contracts/axelar-service-governance/src/: contract.rs  error.rs  event.rs  lib.rs  storage_types.rs  test.rs  types.rs
contracts/axelar-soroban-interfaces/: Cargo.toml  README.md
contracts/axelar-soroban-interfaces/src/: axelar_auth_verifier.rs  axelar_executable.rs  axelar_gas_service.rs  axelar_gateway.rs  axelar_operators.rs  axelar_service_governance.rs  error.rs  interchain_token_service.rs  lib.rs  test.rs  types.rs
contracts/axelar-soroban-interfaces/tests/: types.rs
contracts/example/: Cargo.toml
contracts/example/src/: contract.rs  event.rs  lib.rs  storage_types.rs  test.rs
contracts/example/tests/: test.rs
contracts/gmp-example/: Cargo.toml
contracts/gmp-example/src/: contract.rs  lib.rs
contracts/gmp-example/tests/: test.rs
contracts/interchain-token/: Cargo.toml
contracts/interchain-token-service/: Cargo.toml
contracts/interchain-token-service/src/: abi.rs  contract.rs  error.rs  event.rs  executable.rs  interface.rs  lib.rs  storage_types.rs  test.rs  testutils.rs  token_handler.rs  types.rs
contracts/interchain-token-service/src/testdata/: deploy_token_manager_encode_decode.golden  interchain_transfer_encode_decode.golden
contracts/interchain-token-service/src/tests/: test.rs
contracts/interchain-token-service/tests/: canonical_token.rs  deploy_interchain_token.rs  deploy_remote_canonical_token.rs  deploy_remote_interchain_token.rs  executable.rs  execute.rs  interchain_transfer.rs  message_routing.rs  mod.rs  register_canonical_token.rs  test.rs  trusted_address.rs  trusted_chain.rs
contracts/interchain-token-service/tests/testdata/: canonical_token_id_derivation.golden  deploy_interchain_token_message_execute_succeeds.golden  deploy_interchain_token_succeeds.golden  deploy_remote_canonical_token_succeeds.golden  deploy_remote_interchain_token_succeeds.golden  interchain_token.wasm  interchain_token_deploy_salt.golden  interchain_transfer_execute_succeeds.golden  interchain_transfer_message_execute_succeeds.golden  interchain_transfer_receive.golden  interchain_transfer_receive_succeeds.golden  interchain_transfer_send_succeeds.golden  register_canonical_token_succeeds.golden  remove_trusted_chain.golden  set_trusted_address.golden
contracts/interchain-token-service/tests/utils/: mod.rs
contracts/interchain-token/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  storage_types.rs  test.rs  utils.rs
contracts/interchain-token/tests/: test.rs
contracts/upgrader/: Cargo.toml
contracts/upgrader/src/: contract.rs  error.rs  lib.rs
contracts/upgrader/src/testdata/: axelar_gateway.wasm  dummy.wasm  upgraded_dummy_contract.wasm
contracts/upgrader/tests/: atomic_upgrades.rs
contracts/upgrader/tests/testdata/: dummy.wasm
contracts/upgrader/tests/utils/: dummy_contract.rs  dummy_contract_after_upgrade.rs  mod.rs
executable/: Cargo.toml
executable-example/: Cargo.toml
executable-example/src/: lib.rs
executable/src/: executable.rs  lib.rs
integration-tests/: Cargo.toml  README.md  build.rs
integration-tests/tests/: gmp.rs  upgrade.rs
integration-tests/tests/testdata/: axelar_gateway_new.wasm
