[workspace]
resolver = "2"
members = [
  "contracts/*",
  "integration-tests",
  "packages/*",
]

[workspace.package]
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
soroban-sdk = { version = "22.0.0-rc.3" }
cfg-if = { version = "1.0" }
axelar-soroban-std = { version = "^0.1.0", path = "packages/axelar-soroban-std" }
axelar-gas-service = { version = "^0.1.0", path = "contracts/axelar-gas-service" }
axelar-gateway = { version = "^0.1.0", path = "contracts/axelar-gateway" }
axelar-operators = { version = "^0.1.0", path = "contracts/axelar-operators" }
interchain-token-service = { version = "^0.1.0", path = "contracts/interchain-token-service" }
interchain-token = { version = "^0.1.0", path = "contracts/interchain-token" }
example = { version = "^0.1.0", path = "contracts/example" }

[workspace.lints.clippy]
nursery = "warn"

[workspace.lints.rust]
warnings = "deny"
deprecated = "allow"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
