[workspace]
resolver = "2"
members = ["contracts/*", "integration-tests", "packages/*"]

[workspace.package]
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
soroban-sdk = { version = "22.0.0-rc.3" }
soroban-token-sdk = { version = "22.0.0-rc.3" }
cfg-if = { version = "1.0" }
axelar-soroban-std = { version = "^0.1.0", path = "packages/axelar-soroban-std" }
axelar-gas-service = { version = "^0.1.0", path = "contracts/axelar-gas-service" }
axelar-gateway = { version = "^0.1.0", path = "contracts/axelar-gateway" }
axelar-operators = { version = "^0.1.0", path = "contracts/axelar-operators" }
interchain-token-service = { version = "^0.1.0", path = "contracts/interchain-token-service" }
alloy-primitives = { version = "0.7.6", default-features = false, features = [
    "std",
] }
alloy-sol-types = { version = "0.7.6", default-features = false, features = [
    "std",
] }
goldie = "0.5.0"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
too_many_arguments = "allow"

[workspace.lints.rust]
warnings = "deny"
deprecated = "allow"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
