[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "0.9.2", features = ["alloc"] }
ed25519-dalek = { version = "2.0.0-rc.3", features = ["rand_core"] }
rand = { vesion = "0.8.5" }

[dev_dependencies]
soroban-sdk = { version = "0.9.2", features = ["testutils", "alloc"] }
ed25519-dalek = { version = "2.0.0-rc.3", features = ["rand_core"] }
rand = { vesion = "0.8.5" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
