[package]
name = "integration-tests"
version = "0.1.0"
edition = { workspace = true }
description = "Axelar CGP Soroban Integration tests"

[lib]
crate-type = ["rlib"]

[dependencies]

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
axelar-soroban-std = { workspace = true, features = ["testutils"] }
axelar-gateway = { workspace = true, features = [ "testutils" ] }
