[package]
name = "axelar-gas-service"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Axelar Gas Service."
license = "MIT OR Apache-2.0"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axelar-soroban-std = { workspace = true }
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
axelar-soroban-std = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
