[package]
name = "axelar-gas-service"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Axelar Gas Service."
license = "MIT"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axelar-soroban-std = { workspace = true }
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
axelar-soroban-std = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }

[lints]
workspace = true

[features]
library = [] # Only export the contract interface
testutils = []
