[package]
name = "axelar-gateway"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Axelar Gateway."
license = "MIT OR Apache-2.0"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axelar-soroban-std = { workspace = true }
ed25519-dalek = { version = "^2.1", default-features = false, optional = true }
rand = { version = "0.8.5", optional = true }
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
axelar-soroban-std = { workspace = true, features = ["testutils"] }
ed25519-dalek = { version = "^2.1" }
rand = { version = "0.8.5" }
goldie = { version = "0.5" }
hex = "0.4"
hex-literal = "0.4"

[features]
testutils = ["soroban-sdk/testutils", "axelar-soroban-std/testutils", "ed25519-dalek", "rand"]

[lints]
workspace = true
