[package]
name = "axelar-operators"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
axelar-soroban-std = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
axelar-soroban-std = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
