[package]
name = "example"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
axelar-gas-service = { workspace = true, features = ["testutils"] }
axelar-gateway = { workspace = true, features = ["testutils"] }
axelar-soroban-std = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
