[package]
name = "interchain-token-service"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Interchain Token Service."
license = "MIT"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
axelar-soroban-std = { workspace = true }
soroban-sdk = { workspace = true, features = ["alloc"] }

[dev-dependencies]
axelar-soroban-std = { workspace = true, features = ["testutils"] }
goldie = { version = "0.5" }
hex = "0.4"
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }

[features]
testutils = ["soroban-sdk/testutils", "axelar-soroban-std/testutils"]

[lints]
workspace = true
