[package]
name = "interchain-token-service"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Interchain Token Service."
license = "MIT"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
axelar-gas-service = { workspace = true, features = ["library"] }
axelar-gateway = { workspace = true, features = ["library"] }
axelar-soroban-std = { workspace = true }
soroban-sdk = { workspace = true, features = ["alloc"] }
soroban-token-sdk = { workspace = true }

[dev-dependencies]
axelar-gas-service = { workspace = true, features = ["testutils"] }
axelar-gateway = { workspace = true, features = ["testutils"] }
axelar-soroban-std = { workspace = true, features = ["testutils"] }
goldie = { workspace = true }
hex = "0.4"
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }

[lints]
workspace = true
